<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TabFragment1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="20dip">

        <ImageView
            android:id="@+id/bluebin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="20dip"
            android:contentDescription="bluebin"
            android:src="@drawable/blue_bin">

        </ImageView>

        <TextView
            android:id="@+id/instructionSource1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/instructionsSource1" />

        <TextView
            android:id="@+id/instructionText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dip"
            android:text="@string/instructionsText1" />

        <ImageView
            android:id="@+id/recycleInfographic"
            android:adjustViewBounds="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="bluebinshouldnt"
            android:paddingTop="20dip"
            android:paddingHorizontal="20dip"
            android:src="@drawable/blue_bin_shouldnt"></ImageView>

        <TextView
            android:id="@+id/instructionSource2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/instructionsSource2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp" />

    </LinearLayout>
</ScrollView>